--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,8 @@ env:
   PYTHON_VERSION: '3.12'
 
 jobs:
-  # STEP 1: Unit Tests
+
+  #STEP 1: Unit Tests
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
@@ -117,3 +118,28 @@ jobs:
         with:
           name: bandit-report
           path: bandit-report.json
+
+  # STEP 5: Build Docker Image
+  build-docker:
+    name: Build Docker Image
+    runs-on: ubuntu-latest
+    needs : [unit-tests, linter, style-check, sast]
+    steps:
+      - uses: actions/checkout@v4
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} .
+          docker tag ${{ env.DOCKER_IMAGE }}:${{ github.sha }} ${{ env.DOCKER_IMAGE }}:latest
+      
+      - name: Save Docker image
+        run: docker save ${{ env.DOCKER_IMAGE }}:${{ github.sha }} -o image.tar
+      
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image
+          path: image.tar
