--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -132,7 +132,7 @@ jobs:
 
       - name: Debug DOCKER_IMAGE
         run: |
-          echo "DOCKER_IMAGE='${{ env.DOCKER_IMAGE }}'"
+          echo "test DOCKER_IMAGE='${{ env.DOCKER_IMAGE }}'"
       
       - name: Build Docker image
         run: |
