--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -169,3 +169,40 @@ jobs:
           format: 'table'
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
+
+  # STEP 7: Migrations tests
+  test-migrations:
+    name: Test Database Migrations
+    runs-on: ubuntu-latest
+    needs: [unit-tests, linter, style-check, sast]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Check for pending migrations
+        env:
+          SECRET_KEY: test-secret-key-for-ci
+          DATABASE_URL: sqlite:///test.db
+          DJANGO_SETTINGS_MODULE: config.settings
+        run: |
+          python manage.py makemigrations --check --dry-run
+
+      - name: Validate migration plan
+        env:
+          SECRET_KEY: test-secret-key-for-ci
+          DATABASE_URL: sqlite:///test.db
+          DJANGO_SETTINGS_MODULE: config.settings
+        run: |
+          python manage.py migrate --plan
+
+
