--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -234,4 +234,45 @@ jobs:
           docker push ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
           docker push ${{ env.DOCKER_IMAGE }}:latest
 
+  # STEP 9: Kubernetes
+  deploy-kubernetes:
+    name: Deploy to Kubernetes
+    runs-on: ubuntu-latest
+    needs: push-to-registry
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v1
+        with:
+          kubectl-version: 'latest'
+
+      - name: Set up kubeconfig
+        run: |
+          echo "${{ secrets.KUBE_CONFIG }}" > kubeconfig
+          export KUBECONFIG=kubeconfig
+
+      - name: Create Kubernetes Secrets
+        run: |
+          kubectl create secret generic product-catalogue-secret \
+            --namespace=product-catalogue \
+            --from-literal=DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            --from-literal=SECRET_KEY="${{ secrets.SECRET_KEY }}" \
+            --dry-run=client -o yaml | kubectl apply -f -
+
+      - name: Update Kubernetes deployment with new image
+        run: |
+          echo "Updating Kubernetes deployment with image: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
+          kubectl set image deployment/product-catalogue product-catalogue=${{ env.DOCKER_IMAGE }}:${{ github.sha }} -n product-catalogue
+
+      - name: Wait for deployment to complete
+        run: |
+          kubectl rollout status deployment/product-catalogue -n product-catalogue
+
+      - name: Deployment summary
+        run: |
+          echo "Pipeline completed successfully!"
+          echo "Docker image: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}"
+          echo "Deployment completed to Kubernetes cluster!"
