--- a/k8s/secret.yml
+++ b/k8s/secret.yml
@@ -6,4 +6,4 @@ metadata:
 type: Opaque
 stringData:
   DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/product_catalogue"
-  SECRET_KEY: "your-secret-key-here"
+  SECRET_KEY: "your-secret-key-heres"
