--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Python
 __pycache__/
 *.pyo
 *.pyd
@@ -10,12 +9,12 @@ db.sqlite3
 staticfiles/
 media/
 
+k8s/secret.yml
+
 
 *.log
 
 
-.DS_Store
-Thumbs.db
 .vscode/
 .idea/
 
